tests/errors/list_remove_out_of_range_panics.ptt
// Runtime-panic test: List.remove with i >= count must abort
// cleanly via the assert(false) path.

use std/list

spark {
  xs is List of int()
  xs.push(1)
  v is xs.remove(5)
  yell(v)
}
